[package]
name = "tabout"
version = "0.3.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Tabulate output for CLI programs"
license = "MIT"
documentation = "https://docs.rs/tabout"
readme = "../../README.md"
keywords = ["terminal", "frankenterm"]
categories = ["command-line-utilities"]

[dependencies]
termwiz.workspace = true
