[package]
name = "frankenterm-uds"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wezterm/wezterm"
description = "Portable unix domain sockets"
license = "MIT"
documentation = "https://docs.rs/frankenterm-uds"
publish = false

[dependencies]
async-io = { workspace = true, optional = true }
asupersync = { workspace = true, optional = true }
uds_windows.workspace = true

[features]
default = ["async-io"]

async-io = ["dep:async-io"]
async-asupersync = ["dep:asupersync"]
